alfa v1.1  (multiple cities)

--- a/config.json.sample
+++ b/config.json.sample
@@ -1,5 +1,6 @@
 {
   "apikey" : "copy of your open weather API key",
-  "cityid" : 2950159,
+  "cityidtable" : [2950158, 2925533, 6455259],
+  "cityidx"     : 1,
   "kindle" : 1
 }
